--- a/src/components/game/game.scss
+++ b/src/components/game/game.scss
@@ -1,14 +1,14 @@
 .buttons{
     background-color: transparent;
-    outline: none;
+   
     margin: 10px;
     border: "0px solid black";
     border-radius: 20px;
     padding-left: 50px;
     padding-right:50px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-family: 'Quantico';
     &:hover{
         cursor:pointer;
         background-color: white;
@@ -23,14 +23,17 @@
 }
 
 .pokemonImages{
-    width: 300px;
+    width: 280px;
     height: 'auto'; 
     
-    border: "0px solid black";
-    border-radius:10px;
-
     &:hover{
         cursor: pointer;
         transform: scale(1.2);
     }
+}
+
+.points{
+    font-size: 20px;
+    color: navy;
+    font-weight:bold;
 }
