--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -1,3 +1,11 @@
 .buttons{
     margin:10px;
+    font-family: 'Quantico';
+    font-size: 20px;
+}
+
+.highScore{
+    font-size: 25px;
+    color: navy;
+    font-weight:bold;
 }
